    [#] Tasks will now log engine specific messages to QtMsgLoggerEngine and ConsoleLoggerEngine when they are
        active and this is enabled using new functions on TaskManager to enable it. See
        TaskManager::forwardTaskMessagesToQtMsgEngine() and TaskManager::setForwardTaskMessagesToQtMsgEngine().

    ============================
    QtilitiesCoreGui:
    ============================
    [+] Added DynamicSideWidgetViewer::setHiddenSideWidgets() and DynamicSideWidgetViewer::hiddenSideWidgets().
    [+] Added HelpManager::homePageChanged().
    [+] Added a new parameter to QtilitiesMainWindow::writeSettings() and QtilitiesMainWindow::readSettings() to
        specify a custom ID under which the settings of the window must be saved.
    [+] Added TaskSummaryWidget::numberOfDisplayedTasksChanged() signal.
    [+] Added TaskSummaryWidget::setDisplayedTasksFilter() and TaskSummaryWidget::displayedTasksFilter().
    [+] Added SingleTaskWidget::hiddenByStopButton().
    [+] Added access functions for the buttons in SingleTaskWidget in order to allow more customization.

    [#] ObserverWidget now longer assigns F5 QKeySequence::Refresh to the refresh action.
    [#] Made the following functions public on AddDynamicPropertyWizard: propertyRemovable(),
        propertyIsExportable(), propertyReadOnly(), propertyDefaultValue().
    [#] The refresh_list parameter on ModeManager::setActiveMode() is now false by default.
    [#] Renamed ModeManager::isValidModeID() to ModeManager::containsModeId() where it now returns the opposite of what it always returned.

    [*] Fixed AbstractTreeItem::getIcon() and AbstractTreeItem::hasIcon() which checked the wrong property
        on the object.
    [*] Fixed some inconsitancies between select object functions on ObserverWidget.
    [*] Fixed bug in QtilitiesTreeModelProxyFilter where it always sorted using the name column.
    [*] Fixed bug in ObserverWidget where it did not calculate expanded items correctly when