@@ -1,0 +1,61 @@
+/**
+\page page_whats_new_v1_3 What's New In %Qtilities v1.3
+
+This page and overview of new classes, and functions added to existing classes in the v1.3 release.
+
+A detailed overview of changes and bug fixes can be found in the <a href="http://raw.github.com/JPNaude/Qtilities/v1.3/Changelog.txt">detailed change log</a>. The change log uses
+the following legend to list items.
+- [+] New feature added
+- [*] Bug fix
+- [#] Change/improvement to old code
+
+For comment, queries or bug reports please get in touch.
+- Support: support@qtilities.org
+- Issue List: https://github.com/JPNaude/Qtilities/issues
+- Mailing List: http://groups.google.com/group/qtilities?hl=en?hl=en/
+
+\section whats_new_v1_3_classes New Classes & Structs
+
+%Qtilities v1.3 provides no new classes or structs.
+
+\section whats_new_v1_3_functions New Functions
+
+\subsection Qtilities::Logging
+
+- Qtilities::Logging::Logger::qtMsgEngineActive()
+- Qtilities::Logging::Logger::consoleEngineActive()
+
+\subsection Qtilities::Core
+
+- Qtilities::Core::FileUtils::makeLocalCopyOfResource()
+- Qtilities::Core::FileUtils::pathStartsWith()
+- Qtilities::Core::TaskManager::assignIdToTask()
+- Qtilities::Interfaces::ITask::taskStopConfirmation()
+- Qtilities::Interfaces::ITask::setTaskStopConfirmation()
+
+\subsection Qtilities::CoreGui
+
+- Qtilities::CoreGui::DynamicSideWidgetViewer::setHiddenSideWidgets()
+- Qtilities::CoreGui::DynamicSideWidgetViewer::hiddenSideWidgets()
+- Qtilities::CoreGui::DynamicSideWidgetViewer::hiddenSideWidgets()
+- Qtilities::CoreGui::TaskSummaryWidget::numberOfDisplayedTasksChanged()
+- Qtilities::CoreGui::TaskSummaryWidget::setDisplayedTasksFilter()
+- Qtilities::CoreGui::TaskSummaryWidget::displayedTasksFilter()
+- Qtilities::CoreGui::SingleTaskWidget::hiddenByStopButton()
+- Qtilities::CoreGui::SingleTaskWidget::stopButton()
+- Qtilities::CoreGui::SingleTaskWidget::pauseButton()
+- Qtilities::CoreGui::SingleTaskWidget::startButton()
+- Qtilities::CoreGui::SingleTaskWidget::showLogButton()
+- Qtilities::CoreGui::HelpManager::homePageChanged()
+
+\subsection Qtilities::ExtensionSystem
+
+- Qtilities::ExtensionSystem::ExtensionSystemCore::pluginPathsChanged()
+
+\subsection Qtilities::ProjectManagement
+
+- Qtilities::ProjectManagement::ProjectManager::projectCreationStarted()
+- Qtilities::ProjectManagement::ProjectManager::projectCreationFinished()
+- Qtilities::ProjectManagement::ProjectManager::currentProjectChanged()
+
+*/
