@@ -97,7 +97,6 @@
         <file>qtilities/coregui/icons/task_done_22x22.png</file>
         <file>qtilities/coregui/icons/task_done_with_errors_22x22.png</file>
         <file>qtilities/coregui/icons/task_done_with_warnings_22x22.png</file>
-        <file>qtilities/coregui/icons/task_stop_22x22.png</file>
         <file>qtilities/coregui/icons/task_not_started_22x22.png</file>
         <file>qtilities/coregui/icons/task_start_22x22.png</file>
         <file>qtilities/coregui/icons/task_resume_22x22.png</file>
@@ -106,5 +105,6 @@
         <file>qtilities/coregui/icons/file_save_all_16x16.png</file>
         <file>qtilities/coregui/icons/file_save_all_22x22.png</file>
         <file>qtilities/coregui/icons/combobox_down_arrow.png</file>
+        <file>qtilities/coregui/icons/task_stop_22x22.png</file>
     </qresource>
 </RCC>
